--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,10 +3,14 @@
 
 :root {
   --primary: #fe2c55;
+  --header-high: 60px;
+  --Default-header-minWidth: calc(100% - 60px); 
 }
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html {
