--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,32 +1,37 @@
-@import "normalize.css";
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Lato:wght@700&family=Roboto:wght@400;500;700&display=swap");
+@import 'normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Lato:wght@700&family=Roboto:wght@400;500;700&display=swap');
 
 :root {
-  --primary: #fe2c55;
-  --header-high: 60px;
-  --Default-header-minWidth: calc(100% - 60px); 
+    --text-white: #fff;
+    --text-black: #000;
+
+    --primary: #fe2c55;
+    --header-high: 60px;
+    --Default-header-minWidth: calc(100% - 60px);
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-  font-family: "Inter", sans-serif;
-  font-family: "Lato", sans-serif;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.6rem;
-  line-height: 1.5;
-  text-rendering: optimizeSpeed;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    text-rendering: optimizeSpeed;
 }
 
-button, input, [tabIndex] {
-  outline: none;
-  border: none;
+button,
+input,
+[tabIndex] {
+    outline: none;
+    border: none;
 }
