--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -90,5 +90,8 @@
     color: rgba(22, 24, 35, 0.5);
 }
 
-.action {
+.more-btn {
+    margin-left: 24px;
+    font-size: 16px;
+    background-color: transparent;
 }
