--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -8,8 +8,8 @@
     font-size: 1.6rem;
     line-height: 21px;
     letter-spacing: 0.03px;
-    font-family: 'Roboto', sans-serif;
     border: 1px solid rgba(22, 24, 35, 0.12);
+    font-family: 'TikTokFont', 'arial';
 
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
