--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -102,13 +102,14 @@
 // User login
 .action {
     display: flex;
-    gap: 26px;
+    gap: 21px;
     align-items: center;
 }
 
 .user-icon {
     background-color: transparent;
-    font-size: 21px;
+    height: 26px;
+    width: 26px;
 }
 
 .avt {
